Add RuboCop ruby target version

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,10 @@
 require:
   - rubocop-rspec
 
+AllCops:
+  TargetRubyVersion: 2.7
+  DisplayCopNames: true
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
