Add missing cops for RuboCop 0.82

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,3 +35,15 @@ Bundler/GemComment:
 
 RSpec/NestedGroups:
   Max: 4
+
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
+Lint/RaiseException:
+  Enabled: true
+
+Lint/StructNewOverride:
+  Enabled: true
+
+Style/ExponentialNotation:
+  Enabled: true
