--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Install dependencies
       run: bundle install --jobs 4 --retry 3
 
-    - name: Run RuboCop
+
+    - name: RuboCop code scanning
       run: |
         bash -c "
           bin/rubocop --require code_scanning --format CodeScanning::SarifFormatter -o rubocop.sarif
@@ -31,3 +32,6 @@ jobs:
       uses: github/codeql-action/upload-sarif@v1
       with:
         sarif_file: rubocop.sarif
+
+    - name: RuboCop output
+      run: bin/rubocop
