--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.3, 2.4, 2.5, 2.6, 2.7, head]
+        ruby: [2.4, 2.5, 2.6, 2.7, head]
 
     steps:
     - name: Checkout repository
