Test on multiple Ruby versions (+ 2.4 and 3.0 support) (#34)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,25 @@
 name: Test & Lint
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push, pull_request]
 
 jobs:
   build:
+    name: on ruby ${{matrix.ruby}}
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: [2.4, 2.5, 2.6, 2.7, head]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7.2
+        ruby-version: ${{matrix.ruby}}
 
     - name: Install dependencies
       run: bundle install --jobs 4 --retry 3
