--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,6 +40,9 @@ RSpec/NestedGroups:
 RSpec/MultipleExpectations:
   Enabled: false
 
+Style/AsciiComments:
+  Enabled: false
+
 Style/HashEachMethods:
   Enabled: true
 
@@ -54,9 +57,6 @@ Style/Documentation:
 
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
-
-Style/OpenStructUse:
-  Enabled: false
 
 Style/ExponentialNotation:
   Enabled: true
