--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,16 +1,10 @@
-name: Test
+name: Lint
 
-on: [push, pull_request]
+on: pull_request
 
 jobs:
-  test:
-    name: on ruby ${{matrix.ruby}}
+  lint:
     runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        ruby: [2.4, 2.5, 2.6, 2.7, head]
 
     steps:
     - name: Checkout repository
@@ -19,10 +13,10 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{matrix.ruby}}
+        ruby-version: 2.7.2
 
     - name: Install dependencies
       run: bundle install --jobs 4 --retry 3
 
-    - name: RSpec
-      run: bin/rake spec
+    - name: RuboCop
+      run: bin/rubocop
