disable Style/DoubleNegation rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -70,3 +70,6 @@ Style/StringLiterals:
 
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
+
+Style/DoubleNegation:
+  Enabled: false
