Autoloading with Zeitwerk gem ⌚︎ (#78)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -50,6 +50,9 @@ RSpec/MultipleExpectations:
 Style/AsciiComments:
   Enabled: false
 
+Style/ClassAndModuleChildren:
+  EnforcedStyle: compact
+
 Style/HashEachMethods:
   Enabled: true
 
