Added RuboCop `Layout/LineLength` rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,9 @@ Gemspec/OrderedDependencies:
 Gemspec/RequiredRubyVersion:
   Enabled: false
 
+Layout/LineLength:
+  Max: 80
+
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
 
