Bundler cache & new formatter on RuboCop GitHub Action 🐙 (#90)

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,16 +7,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 2.7.2
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7.2
+          bundler-cache: true
 
-    - name: Install dependencies
-      run: bundle install --jobs 4 --retry 3
-
-    - name: RuboCop
-      run: bin/rubocop
+      - name: RuboCop
+        run: bin/rubocop --format github
