--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['2.7', '3.0', '3.1', head]
+        ruby: ['2.7', '3.0', '3.1', '3.2', head]
 
     steps:
       - name: Checkout repository
@@ -22,9 +22,7 @@ jobs:
           ruby-version: ${{matrix.ruby}}
 
       - name: Install dependencies
-        # Fallback to an update for the diffent dependency versions when using
-        # Ruby 2.4.
-        run: bundle install --jobs 4 --retry 3 || bundle update --jobs 4 --retry 3
+        run: bundle install --jobs 4 --retry 3
 
       - name: RSpec
         run: bin/rake spec
