--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,14 +13,20 @@ AllCops:
     - bin/rubocop
     - vendor/**/*
 
+# Bundler
+
 Bundler/GemComment:
   Enabled: true
+
+# Gemspec
 
 Gemspec/OrderedDependencies:
   Enabled: false
 
 Gemspec/RequiredRubyVersion:
   Enabled: false
+
+# Layout
 
 # Errors out on Ruby 3.1.3
 Layout/BlockAlignment:
@@ -32,11 +38,22 @@ Layout/LineLength:
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
 
+Layout/SpaceInLambdaLiteral:
+  EnforcedStyle: require_space
+
+# No space inside Hash literals, e.g. {key: "value"}
+Layout/SpaceInsideHashLiteralBraces:
+  EnforcedStyle: no_space
+
+# Lint
+
 Lint/RaiseException:
   Enabled: true
 
 Lint/StructNewOverride:
   Enabled: true
+
+# Metrics
 
 Metrics/BlockLength:
   Exclude:
@@ -49,11 +66,15 @@ Metrics/MethodLength:
     - spec/**/*
     - service_actor.gemspec
 
+# RSpec
+
 RSpec/NestedGroups:
   Max: 5
 
 RSpec/MultipleExpectations:
   Enabled: false
+
+# Style
 
 Style/AsciiComments:
   Enabled: false
@@ -91,6 +112,3 @@ Style/DoubleNegation:
 
 Style/StabbyLambdaParentheses:
   EnforcedStyle: require_no_parentheses
-
-Layout/SpaceInLambdaLiteral:
-  EnforcedStyle: require_space
