--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,6 +29,9 @@ Gemspec/RequiredRubyVersion:
 
 # Layout
 
+Layout/ArgumentAlignment:
+  EnforcedStyle: with_first_argument
+
 # Errors out on Ruby 3.1.3
 Layout/BlockAlignment:
   Enabled: false
@@ -98,9 +101,19 @@ Style/Documentation:
 Style/ExponentialNotation:
   Enabled: true
 
+Layout/IndentationConsistency:
+  Exclude:
+    - README.md
+
+Style/MethodCallWithArgsParentheses:
+  Enabled: false
+
 # Allow using the second parameter as a boolean.
 Style/OptionalBooleanParameter:
   Enabled: false
+
+Style/SingleLineMethods:
+  AllowIfMethodIsEmpty: true
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
@@ -108,8 +121,17 @@ Style/StringLiterals:
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
 
+Style/TrailingCommaInHashLiteral:
+  Exclude:
+    - README.md
+
 Style/DoubleNegation:
   Enabled: false
 
 Style/StabbyLambdaParentheses:
   EnforcedStyle: require_no_parentheses
+
+# ThreadSafety
+
+ThreadSafety/InstanceVariableInClassMethod:
+  Enabled: false
