--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,9 @@ name: Test
 
 on: [push, pull_request]
 
+env:
+  RUBYOPT: --enable=frozen-string-literal --debug=frozen-string-literal
+
 jobs:
   test:
     name: on ruby ${{matrix.ruby}}
@@ -10,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['2.7', '3.0', '3.1', '3.2', '3.3', head]
+        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3", "ruby-3.4.0-preview2", head]
 
     steps:
       - name: Checkout repository
@@ -25,4 +28,4 @@ jobs:
         run: bundle install --jobs 4 --retry 3
 
       - name: RSpec
-        run: bin/rake spec
+        run: bin/rspec
