--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3", "ruby-3.4.0-preview2", head]
+        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3", "3.4.0-preview2", head]
 
     steps:
       - name: Checkout repository
