--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3", "3.4", head, jruby-9.4.12.0]
+        ruby: ["3.0", "3.1", "3.2", "3.3", "3.4", head, jruby-9.4.12.0]
 
     steps:
       - name: Checkout repository
