--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,13 +73,19 @@ Metrics/MethodLength:
 
 # RSpec
 
+RSpec/DescribedClass:
+  Enabled: false
+
 RSpec/ExampleLength:
-  Max: 10
+  Max: 12
 
 RSpec/NestedGroups:
   Max: 5
 
 RSpec/MultipleExpectations:
+  Enabled: false
+
+RSpec/RepeatedExample:
   Enabled: false
 
 RSpec/VerifiedDoubles:
