--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ["3.2", "3.3", "3.4", head, jruby-10.0.0.1]
+        ruby: ["3.2", "3.3", "3.4", "4.0", head, jruby-10.0.0.1]
 
     steps:
       - name: Checkout repository
